--- a/client/src/components/Navbar-item.css
+++ b/client/src/components/Navbar-item.css
@@ -1,10 +1,10 @@
-.block {
+.navbar-body .block {
   padding: 5px 10px;
   /* Set padding here instead of only on hover */
 }
 
-.hover\:text-brandPrimary:hover {
-  color: white;
+.navbar-body .hover\:text-brandPrimary:hover {
+  color: white !important;
   /* Keep the original text color */
   background-color: #16689A;
   /* Replace with your desired background color */
