--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -32,7 +32,7 @@
   direction: ltr;
 }
 
-.login-page .login-container {
+.login-body .login-container {
   margin: 0 auto;
   max-width: 410px;
   padding: 2rem 1.5rem;
