--- a/client/src/pages/Dashboard.css
+++ b/client/src/pages/Dashboard.css
@@ -15,6 +15,10 @@
   --tw-bg-opacity: 1;
   background-color: #03C9D7;
 }
+.dashboard-body .hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: #039EA8;
+}
 
 .dashboard-body .nav-item,
 .dashboard-body .navbar {
